@@ -104,6 +104,19 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|DocValuesType
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|IndexableField
 import|;
 end_import
@@ -1804,6 +1817,22 @@ name|getLatestSchema
 argument_list|()
 argument_list|)
 decl_stmt|;
+name|searcher
+operator|.
+name|decorateDocValueFields
+argument_list|(
+name|doc
+argument_list|,
+name|docid
+argument_list|,
+name|searcher
+operator|.
+name|getNonStoredDVs
+argument_list|(
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|transformer
@@ -2626,9 +2655,74 @@ name|out
 operator|.
 name|add
 argument_list|(
-operator|(
-name|IndexableField
-operator|)
+name|f
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|f
+operator|.
+name|fieldType
+argument_list|()
+operator|.
+name|docValuesType
+argument_list|()
+operator|!=
+name|DocValuesType
+operator|.
+name|NONE
+condition|)
+block|{
+name|SchemaField
+name|schemaField
+init|=
+name|schema
+operator|.
+name|getFieldOrNull
+argument_list|(
+name|f
+operator|.
+name|name
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|schemaField
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|schemaField
+operator|.
+name|stored
+argument_list|()
+operator|&&
+name|schemaField
+operator|.
+name|useDocValuesAsStored
+argument_list|()
+condition|)
+block|{
+name|out
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"Don't know how to handle field "
+operator|+
 name|f
 argument_list|)
 expr_stmt|;
