@@ -110,7 +110,7 @@
    <!-- If you remove this field, you must _also_ disable the update log in solrconfig.xml
       or Solr won't start. _version_ and update log are required for SolrCloud
    --> 
-   <field name="_version_" type="long" indexed="true" stored="true"/>
+   <field name="_version_" type="long" indexed="false" stored="false" docValues="true" />
    
    <!-- points to the root document of a block of nested documents. Required for nested
       document support, may be removed otherwise
@@ -199,27 +199,48 @@
        RESTRICTION: the glob-like pattern in the name attribute must have
        a "*" only at the start or the end.  -->
    
+   <!-- docvalues and stored are exclusive -->
    <dynamicField name="*_i"  type="int"    indexed="true"  stored="true"/>
    <dynamicField name="*_is" type="int"    indexed="true"  stored="true"  multiValued="true"/>
-   <dynamicField name="*_id"  type="int"    indexed="true"  stored="true"                        docValues="true" />
-   <dynamicField name="*_ids" type="int"    indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_id"  type="int"    indexed="true"  stored="false"                        docValues="true" />
+   <dynamicField name="*_ids" type="int"    indexed="true"  stored="false"  multiValued="true"    docValues="true" />
    <dynamicField name="*_s"  type="string"  indexed="true"  stored="true" />
    <dynamicField name="*_s1"  type="string"  indexed="true"  stored="true" />
    <dynamicField name="*_ss" type="string"  indexed="true"  stored="true" multiValued="true"/>
-   <dynamicField name="*_sd"  type="string"  indexed="true"  stored="true"                       docValues="true" />
-   <dynamicField name="*_sds" type="string"  indexed="true"  stored="true" multiValued="true"    docValues="true" />
+   <dynamicField name="*_sd"  type="string"  indexed="true"  stored="false"                       docValues="true" />
+   <dynamicField name="*_sds" type="string"  indexed="true"  stored="false" multiValued="true"    docValues="true" />
    <dynamicField name="*_l"  type="long"   indexed="true"  stored="true"/>
    <dynamicField name="*_ls" type="long"   indexed="true"  stored="true"  multiValued="true"/>
-   <dynamicField name="*_ld"  type="long"   indexed="true"  stored="true"                        docValues="true" />
-   <dynamicField name="*_lds" type="long"   indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_ld"  type="long"   indexed="true"  stored="false"                        docValues="true" />
+   <dynamicField name="*_lds" type="long"   indexed="true"  stored="false"  multiValued="true"    docValues="true" />
    <dynamicField name="*_f"  type="float"  indexed="true"  stored="true"/>
    <dynamicField name="*_fs" type="float"  indexed="true"  stored="true"  multiValued="true"/>
-   <dynamicField name="*_fd"  type="float"  indexed="true"  stored="true"                        docValues="true" />
-   <dynamicField name="*_fds" type="float"  indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_fd"  type="float"  indexed="true"  stored="false"                        docValues="true" />
+   <dynamicField name="*_fds" type="float"  indexed="true"  stored="false"  multiValued="true"    docValues="true" />
    <dynamicField name="*_d"  type="double" indexed="true"  stored="true"/>
    <dynamicField name="*_ds" type="double" indexed="true"  stored="true"  multiValued="true"/>
-   <dynamicField name="*_dd"  type="double" indexed="true"  stored="true"                        docValues="true" />
-   <dynamicField name="*_dds" type="double" indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_dd"  type="double" indexed="true"  stored="false"                        docValues="true" />
+   <dynamicField name="*_dds" type="double" indexed="true"  stored="false"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_dt"   type="date"   indexed="true"  stored="true"/>
+   <dynamicField name="*_dts"  type="date"   indexed="true"  stored="true" multiValued="true"/>
+   <dynamicField name="*_dtd"  type="date"   indexed="true"  stored="false"                       docValues="true" />
+   <dynamicField name="*_dtds" type="date"   indexed="true"  stored="false" multiValued="true"    docValues="true" />
+ 
+   <!-- docvalues and stored (S suffix) -->
+   <dynamicField name="*_idS"  type="int"    indexed="true"  stored="true"                        docValues="true" />
+   <dynamicField name="*_idsS" type="int"    indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_sdS"  type="string"  indexed="true"  stored="true"                       docValues="true" />
+   <dynamicField name="*_sdsS" type="string"  indexed="true"  stored="true" multiValued="true"    docValues="true" />
+   <dynamicField name="*_ldS"  type="long"   indexed="true"  stored="true"                        docValues="true" />
+   <dynamicField name="*_ldsS" type="long"   indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_fdS"  type="float"  indexed="true"  stored="true"                        docValues="true" />
+   <dynamicField name="*_fdsS" type="float"  indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_ddS"  type="double" indexed="true"  stored="true"                        docValues="true" />
+   <dynamicField name="*_ddsS" type="double" indexed="true"  stored="true"  multiValued="true"    docValues="true" />
+   <dynamicField name="*_dtdS"  type="date"   indexed="true"  stored="true"                       docValues="true" />
+   <dynamicField name="*_dtdsS" type="date"   indexed="true"  stored="true" multiValued="true"    docValues="true" />
+
+
    <dynamicField name="*_b"  type="boolean" indexed="true" stored="true"/>
    <dynamicField name="*_bs" type="boolean" indexed="true" stored="true"  multiValued="true"/>
 
@@ -230,10 +251,6 @@
    <!-- Type used to index the lat and lon components for the "location" FieldType -->
    <dynamicField name="*_coordinate"  type="tdouble" indexed="true"  stored="false" />
 
-   <dynamicField name="*_dt"   type="date"   indexed="true"  stored="true"/>
-   <dynamicField name="*_dts"  type="date"   indexed="true"  stored="true" multiValued="true"/>
-   <dynamicField name="*_dtd"  type="date"   indexed="true"  stored="true"                       docValues="true" />
-   <dynamicField name="*_dtds" type="date"   indexed="true"  stored="true" multiValued="true"    docValues="true" />
    <dynamicField name="*_p"  type="location" indexed="true" stored="true"/>
 
    <!-- some trie-coded dynamic fields for faster range queries -->
@@ -258,8 +275,8 @@
    
 
    <!-- needed by dedup config -->
-   <dynamicField name="*_sS" type="string"  indexed="false" stored="true"/>
    <field name="signatureField" type="string" indexed="true" stored="false"/>
+   <dynamicField name="*_sS" type="string"  indexed="false" stored="true"/>
 
 
  </fields>
@@ -695,7 +712,7 @@
 
     <!-- since fields of this type are by default not stored or indexed,
          any data added to them will be ignored outright.  --> 
-    <fieldtype name="ignored" stored="false" indexed="false" multiValued="true" class="solr.StrField" />
+    <fieldtype name="ignored" stored="false" indexed="false" docValues="false" multiValued="true" class="solr.StrField" />
 
     <!-- This point type indexes the coordinates as separate fields (subFields)
       If subFieldType is defined, it references a type, and a dynamic field
