@@ -262,7 +262,7 @@ name|initCore
 argument_list|(
 literal|"solrconfig-tlog.xml"
 argument_list|,
-literal|"schema15.xml"
+literal|"schema_latest.xml"
 argument_list|)
 expr_stmt|;
 block|}
@@ -292,6 +292,150 @@ argument_list|(
 literal|"id"
 argument_list|,
 literal|"1"
+argument_list|,
+literal|"a_f"
+argument_list|,
+literal|"-1.5"
+argument_list|,
+literal|"a_fd"
+argument_list|,
+literal|"-1.5"
+argument_list|,
+literal|"a_fdS"
+argument_list|,
+literal|"-1.5"
+argument_list|,
+literal|"a_fs"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_fs"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_fds"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_fds"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_fdsS"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_fdsS"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_d"
+argument_list|,
+literal|"-1.2E99"
+argument_list|,
+literal|"a_dd"
+argument_list|,
+literal|"-1.2E99"
+argument_list|,
+literal|"a_ddS"
+argument_list|,
+literal|"-1.2E99"
+argument_list|,
+literal|"a_ds"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_ds"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_dds"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_dds"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_ddsS"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"a_ddsS"
+argument_list|,
+literal|"2.5"
+argument_list|,
+literal|"a_i"
+argument_list|,
+literal|"-1"
+argument_list|,
+literal|"a_id"
+argument_list|,
+literal|"-1"
+argument_list|,
+literal|"a_idS"
+argument_list|,
+literal|"-1"
+argument_list|,
+literal|"a_is"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_is"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"a_ids"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_ids"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"a_idsS"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_idsS"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"a_l"
+argument_list|,
+literal|"-9999999999"
+argument_list|,
+literal|"a_ld"
+argument_list|,
+literal|"-9999999999"
+argument_list|,
+literal|"a_ldS"
+argument_list|,
+literal|"-9999999999"
+argument_list|,
+literal|"a_ls"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_ls"
+argument_list|,
+literal|"9999999999"
+argument_list|,
+literal|"a_lds"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_lds"
+argument_list|,
+literal|"9999999999"
+argument_list|,
+literal|"a_ldsS"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"a_ldsS"
+argument_list|,
+literal|"9999999999"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -321,10 +465,20 @@ literal|"1"
 argument_list|,
 literal|"fl"
 argument_list|,
-literal|"id"
+literal|"id, a_f,a_fd,a_fdS   a_fs,a_fds,a_fdsS,  a_d,a_dd,a_ddS,  a_ds,a_dds,a_ddsS,  a_i,a_id,a_idS   a_is,a_ids,a_idsS,   a_l,a_ld,a_ldS   a_ls,a_lds,a_ldsS"
 argument_list|)
 argument_list|,
-literal|"=={'doc':{'id':'1'}}"
+literal|"=={'doc':{'id':'1'"
+operator|+
+literal|", a_f:-1.5, a_fd:-1.5, a_fdS:-1.5,  a_fs:[1.0,2.5],      a_fds:[1.0,2.5],a_fdsS:[1.0,2.5]"
+operator|+
+literal|", a_d:-1.2E99, a_dd:-1.2E99, a_ddS:-1.2E99,              a_ds:[1.0,2.5],a_dds:[1.0,2.5],a_ddsS:[1.0,2.5]"
+operator|+
+literal|", a_i:-1, a_id:-1, a_idS:-1,                             a_is:[1,2],a_ids:[1,2],a_idsS:[1,2]"
+operator|+
+literal|", a_l:-9999999999, a_ld:-9999999999, a_ldS:-9999999999,  a_ls:[1,9999999999],a_lds:[1,9999999999],a_ldsS:[1,9999999999]"
+operator|+
+literal|"       }}"
 argument_list|)
 expr_stmt|;
 name|assertJQ
@@ -371,6 +525,37 @@ literal|"id:1"
 argument_list|)
 argument_list|,
 literal|"/response/numFound==1"
+argument_list|)
+expr_stmt|;
+comment|// a cut-n-paste of the first big query, but this time it will be retrieved from the index rather than the transaction log
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id, a_f,a_fd,a_fdS   a_fs,a_fds,a_fdsS,  a_d,a_dd,a_ddS,  a_ds,a_dds,a_ddsS,  a_i,a_id,a_idS   a_is,a_ids,a_idsS,   a_l,a_ld,a_ldS   a_ls,a_lds,a_ldsS"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'1'"
+operator|+
+literal|", a_f:-1.5, a_fd:-1.5, a_fdS:-1.5,  a_fs:[1.0,2.5],      a_fds:[1.0,2.5],a_fdsS:[1.0,2.5]"
+operator|+
+literal|", a_d:-1.2E99, a_dd:-1.2E99, a_ddS:-1.2E99,              a_ds:[1.0,2.5],a_dds:[1.0,2.5],a_ddsS:[1.0,2.5]"
+operator|+
+literal|", a_i:-1, a_id:-1, a_idS:-1,                             a_is:[1,2],a_ids:[1,2],a_idsS:[1,2]"
+operator|+
+literal|", a_l:-9999999999, a_ld:-9999999999, a_ldS:-9999999999,  a_ls:[1,9999999999],a_lds:[1,9999999999],a_ldsS:[1,9999999999]"
+operator|+
+literal|"       }}"
 argument_list|)
 expr_stmt|;
 name|assertJQ
@@ -517,7 +702,7 @@ name|assertU
 argument_list|(
 name|delQ
 argument_list|(
-literal|"id:10 abcdef"
+literal|"id:10 foo_s:abcdef"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -555,6 +740,95 @@ literal|"id"
 argument_list|)
 argument_list|,
 literal|"=={'doc':{'id':'11'}}"
+argument_list|)
+expr_stmt|;
+comment|// multivalued field
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"12"
+argument_list|,
+literal|"val_ls"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_ls"
+argument_list|,
+literal|"2"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:12"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==0"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"12"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,val_ls"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'12', 'val_ls':[1,2]}}"
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"12"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,val_ls"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'12', 'val_ls':[1,2]}}"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:12"
+argument_list|)
+argument_list|,
+literal|"/response/numFound==1"
 argument_list|)
 expr_stmt|;
 name|SolrQueryRequest
